<resources>
    <string name="app_name">IF Apps</string>

    <!-- Home -->
    <string name="home">Home</string>
    <string name="welcome_title">Welcome to IF Apps</string>
    <string name="welcome_subtitle">Break tasks down into smaller tasks</string>
    <string name="features">Features</string>
    <string name="FRS">Formulir Rencana Studi</string>
    <string name="pertemuan_title">Pertemuan</string>
    <string name="pertemuan_subtitle">Buat pertemuan sekarang</string>
    <string name="pengumuman_title">Pengumuman</string>'
    <string name="pengumuman_subtitle">Lihat pengumuman terkini</string>

    <!-- FRS -->
    <string name="tahun_frs">Ganjil 2022 - 2023</string>
    <string name="tambah_frs">Tambah Mata Kuliah</string>
    <string name="prasyarat_frs">Prasyarat</string>

    <!-- Pengumuman -->
    <string name="pengumuman">Pengumuman</string>
    <string name="buat_pengumuman">Buat Pengumuman</string>
    <string name="judul_pengumuman">judul_pengumuman</string>

    <string name="judul">Judul</string>
    <string name="tags">Tags</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="subtitle_deskripsi">Sidang Skripsi 1 dilakukan pada tanggal 15 Oktober 2024 dan Sidang Skripsi 2 dilakukan pada tanggal 4 Mei 2025.</string>

    <string name="filter">Filter</string>
    <string name="btn_simpan">Simpan</string>

    <!-- Pertemuan -->
    <string name="pertemuan">Pertemuan</string>
    <string name="buat_pertemuan">Buat Pertemuan</string>
    <string name="jadwal_dosen">Jadwal Dosen</string>

    <string name="organizer">Organizer</string>
    <string name="jam">Jam</string>
    <string name="tanggal">Tanggal</string>
    <string name="partisipan">Partisipan</string>

    <string name="nama_dosen">Nama Dosen</string>
    <string name="judul_pertemuan">judul_pertemuan</string>

    //Headings
    <string name="heading_one">Set a clear agenda</string>
    <string name="heading_two">Find out what is changed</string>
    <string name="heading_three">Register your courses</string>

    //Description
    <string name="desc_one">By using the Meeting feature, we can manage meetings with lecturers and students without time conflicts</string>
    <string name="desc_two">By using the Notification feature, we can see various kinds of the latest news</string>
    <string name="desc_three">By using the FRS feature, we can view course prerequisites and register courses</string>


</resources>