<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_sans_bold"

            >

        </TextView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="146dp"
            android:layout_centerInParent="true"
            android:src="@drawable/welcome_box">

        </ImageView>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="30dp"
            android:src="@drawable/object_orang">

        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="60dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/welcome_title"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_regular"
                android:text="@string/welcome_subtitle"
                android:textColor="@color/white"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/features"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/features"
                android:textColor="@color/black"
                android:textSize="@dimen/subtitle_size">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/features"
            android:layout_centerInParent="true"
            android:layout_marginTop="14dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="280dp">

                <ImageView
                    android:id="@+id/big_box_FRS"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/big_box">

                </ImageView>

                <TextView
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/noto_sans_bold"
                    android:text="@string/FRS"
                    android:textColor="@color/black"
                    android:textSize="@dimen/subtitle_size">

                </TextView>

                <ImageView
                    android:layout_alignParentBottom="true"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/object_frs"
                    android:layout_marginLeft="18dp"
                    android:layout_marginBottom="12dp">

                </ImageView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:id="@+id/small_box_Pertemuan"
                        android:layout_width="170dp"
                        android:layout_height="136dp"
                        android:layout_marginBottom="9dp"
                        android:src="@drawable/small_box">

                    </ImageView>

                    <LinearLayout
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pertemuan_title"
                            android:textColor="@color/black"
                            android:fontFamily="@font/noto_sans_bold"
                            android:textSize="15sp">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pertemuan_subtitle"
                            android:textColor="@color/black"
                            android:fontFamily="@font/noto_sans_regular"
                            android:textSize="11sp">

                        </TextView>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    >

                    <ImageView
                        android:id="@+id/small_box_pengumuman"
                        android:layout_width="170dp"
                        android:layout_height="136dp"
                        android:src="@drawable/small_box">

                    </ImageView>

                    <LinearLayout
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pengumuman_title"
                            android:textColor="@color/black"
                            android:fontFamily="@font/noto_sans_bold"
                            android:textSize="15sp">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pengumuman_subtitle"
                            android:textColor="@color/black"
                            android:fontFamily="@font/noto_sans_regular"
                            android:textSize="11sp">

                        </TextView>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>