<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/judul_pertemuan"
                android:textColor="@color/black"
                android:textSize="28dp"
                android:layout_marginBottom="64dp">

            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                >

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organizer"
                    android:fontFamily="@font/noto_sans_bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginBottom="6dp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Asep Paralon"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textColor="@color/black"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                >

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal"
                    android:fontFamily="@font/noto_sans_bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginBottom="6dp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11 Januari 2023"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textColor="@color/black"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                >

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/partisipan"
                    android:fontFamily="@font/noto_sans_bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginBottom="6dp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dr. Stranger"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textColor="@color/black"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                >

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:fontFamily="@font/noto_sans_bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginBottom="6dp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Meet up gaess"
                    android:fontFamily="@font/noto_sans_regular"
                    android:textColor="@color/black"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="28dp"
                android:width="140sp"
                android:background="@drawable/button_rounded_outline"
                android:fontFamily="@font/noto_sans_medium"
                android:text="Reject"
                android:textColor="@color/colorBG"
                android:textAllCaps="false"
                android:textSize="14sp">

            </Button>

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="140sp"
                android:background="@drawable/button_rounded"
                android:fontFamily="@font/noto_sans_medium"
                android:text="Accept"
                android:textAllCaps="false"
                android:textSize="14sp">

            </Button>
        </LinearLayout>



    </RelativeLayout>

</FrameLayout>